Bug 1390452 - Check texture compatibility when ensuring the texture source; r=bas

MozReview-Commit-ID: LjFvMezb1TV

--HG--
extra : rebase_source : 1b8da7ed75da9da547aef22b1f535fc0567e1b7f